[package]
name = "bet_maker"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.2", features = ["glow"] } # 'glow' is required for web rendering

# Web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
